--- a/parts/pluginDescription.html
+++ b/parts/pluginDescription.html
@@ -17,5 +17,8 @@
         <ul>
             <li>将JavaBean复制为Json字符串</li>
         </ul>
+        <ul>
+            <li>Copy JavaBean as Json string</li>
+        </ul>
     </li>
 </ul>
