--- a/parts/changeNotes.html
+++ b/parts/changeNotes.html
@@ -1,8 +1,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf8">
 <ul>
-    <li>1.0.0
+    <li>1.0.1
         <ol>
             <li>在Java Entity 中右键复制为Json</li>
+        </ol>
+        <ol>
+            <li>Right-click Copy as Json in Java Entity</li>
         </ol>
     </li>
 
