--- a/parts/pluginDescription.html
+++ b/parts/pluginDescription.html
@@ -21,4 +21,10 @@
             <li>Copy JavaBean as Json string</li>
         </ul>
     </li>
+    <li>公众号
+        <ul>
+            <li>liuzhihangs</li>
+        </ul>
+        <img src="https://liuzhihang.com/oss/pic/wechat.jpg"  width="20%" height="20%" />
+    </li>
 </ul>
