--- a/parts/changeNotes.html
+++ b/parts/changeNotes.html
@@ -1,11 +1,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf8">
 <ul>
-    <li>1.0.1
+    <li>1.0.3
         <ol>
-            <li>在Java Entity 中右键复制为Json</li>
+            <li>优化代码</li>
         </ol>
         <ol>
-            <li>Right-click Copy as Json in Java Entity</li>
+            <li>Optimized code</li>
         </ol>
     </li>
 
