支持 2018.3 版本 修改部分字段丢失的问题

--- a/parts/changeNotes.html
+++ b/parts/changeNotes.html
@@ -1,11 +1,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf8">
 <ul>
-    <li>1.0.3
+    <li>1.0.4
         <ol>
-            <li>优化代码</li>
+            <li>修复部分字段丢失的bug</li>
+            <li>修改支持 2018.3 及以上版本</li>
         </ol>
         <ol>
-            <li>Optimized code</li>
+            <li>Fix the bug that some fields are missing</li>
+            <li>Modified support 2018.3 and above</li>
         </ol>
     </li>
 
